# noodle

./: .gitignore  ARCHITECTURE.md  Cargo.toml
.github/workflows/: build-windows.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/agent/src/engine/: mod.rs
crates/agent/src/pipeline/: draft.rs  mod.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/ai/src/provider/: creds.rs  mod.rs
crates/ai/src/schema/: mod.rs
crates/core/: Cargo.toml
crates/core/src/error/: mod.rs
crates/core/src/types/: mod.rs
crates/outlook/: Cargo.toml
crates/outlook/src/: lib.rs
crates/outlook/src/client/: mod.rs
crates/outlook/src/com/: mod.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20240427000000_init.sql  20240428000000_config.sql  20250101000000_project_health.sql
crates/storage/src/: lib.rs
crates/storage/src/qdrant/: mod.rs
crates/storage/src/sqlite/: mod.rs
crates/ui/: Cargo.toml  tauri.conf.json
crates/ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/ui/frontend/src/: App.tsx  index.css
crates/ui/frontend/src/components/: EntityGraph.tsx  SentimentChart.tsx
crates/ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ui/src-tauri/capabilities/: default.json
crates/ui/src-tauri/icons/: icon.icns
crates/ui/src-tauri/permissions/: ai.json  default.json  default.toml  main.json  schemas.json
crates/ui/src-tauri/src/: main.rs
