[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/outlook",
    "crates/ai",
    "crates/agent",
    "crates/ui/src-tauri",
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Security_Credentials"] }
tauri = { version = "2.0.0-rc", features = [] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
log = "0.4"
futures = "0.3"
qdrant-client = "1.8"
reqwest = { version = "0.12", features = ["json"] }
validator = { version = "0.18", features = ["derive"] }
jsonschema = "0.18"
cron = "0.12"
base64 = "0.22"
sha2 = "0.10"
async-trait = "0.1"
