[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
noodle-core = { path = "../core" }
storage = { path = "../storage" }
outlook = { path = "../outlook" }
ai = { path = "../ai" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
qdrant-client = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
