[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
noodle-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
windows = { workspace = true }
async-trait = { workspace = true }
