[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../../core" }
storage = { path = "../../storage" }
outlook = { path = "../../outlook" }
ai = { path = "../../ai" }
agent = { path = "../../agent" }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tauri-build = "2.0.0-rc"
